# adventofcode2019-ocaml

./: .ocamlinit  adventofcode2019-ocaml.opam  dune-project  installdeps.sh  readme.md  run-day.sh
day1/: day1.ml  dune  solution.ml
day2/: solution.ml
day3/: dune  solution.ml
day4/: dune  solution.ml
lib/: lib.ml
